Feat: Implementacion de aggregates de catalogos en el dominio y se mejora las entidades generales de DDD